--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>Title</title>
+    <script type="text/javascript" src="js/jquery-3.2.1.min.js" ></script>
 </head>
 <body>
-<p>Hello World!</p>
+<p>登录页面</p>
+
+<form id="loginForm" action="/login" method="post">
+    <input type="text" name="username" id="username" placeholder="UserName"/>
+    <input type="password" name="password" id="password" placeholder="Password" />
+    <input type="submit"  value="Sign In" id="loginButton2"/>
+</form>
 </body>
+
+
 </html>
